# helpdesk-api

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.bat
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_users.py  0002_create_tickets.py  0003_create_comments.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: auth.py  comments.py  health.py  tickets.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  comment.py  ticket.py  user.py
app/schemas/: __init__.py  auth.py  comment.py  ticket.py  user.py
app/scripts/: __init__.py  seed.py
app/services/: comments.py  tickets.py  users.py
tests/: __init__.py  conftest.py  test_auth.py  test_comments.py  test_config.py  test_health.py  test_seed.py  test_tickets.py
