[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helpdesk-api"
version = "0.1.0"
description = "Portfolio Helpdesk API built with FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "bcrypt>=4.0,<4.1",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.7,<3.0",
    "PyJWT>=2.10,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "pre-commit>=4.0,<5.0",
    "ruff>=0.8,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
